--- a/DrSiwoz/app/src/main/res/layout/drug_list_item.xml
+++ b/DrSiwoz/app/src/main/res/layout/drug_list_item.xml
@@ -6,7 +6,7 @@
     android:rowCount="1">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:text="Name"
         android:id="@+id/drugNameTextView"
@@ -14,7 +14,7 @@
         android:layout_columnWeight="1" />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="20dp"
         android:layout_height="wrap_content"
         android:text="dosage"
         android:id="@+id/drugDosageTextView"
