Wyodrębnienie pojedynczego przycisku podania, dodanie przycisków innych funkcji

--- a/DrSiwoz/app/src/main/res/layout/drugs_fragment.xml
+++ b/DrSiwoz/app/src/main/res/layout/drugs_fragment.xml
@@ -3,12 +3,45 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <ListView
         android:layout_width="242dp"
         android:layout_height="262dp"
         android:id="@+id/listViewDrugs"
         android:layout_centerVertical="true"
         android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Apply"
+        android:id="@+id/applyBtn"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Yesterday"
+        android:id="@+id/histBtn"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Accept"
+        android:id="@+id/acceptBtn"
+        android:layout_below="@+id/applyBtn"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Cancel"
+        android:id="@+id/cancelBtn"
+        android:layout_below="@+id/histBtn"
         android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
