finished checbox; fixed callback for accept, apply and cancel functions, it updates state of drugs now

--- a/DrSiwoz/app/src/main/res/layout/drug_list_item.xml
+++ b/DrSiwoz/app/src/main/res/layout/drug_list_item.xml
@@ -9,7 +9,7 @@
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/checkBox"
+        android:id="@+id/drugCheckBox"
         android:layout_column="0" />
 
     <TextView
